tests/spec/fail/os_setenv_wrong_arity.aja
import (
    "os"
)

os.setenv("AJA_ONLY_KEY")
